# lzrs

./: Cargo.toml
bench/: ;  Cargo.toml
bench/benches/: batched.rs  buf.rs
bench/src/: batched.rs  lib.rs
lzrs/: Cargo.toml
lzrs-lib/: Cargo.toml
lzrs-lib/src/: lib.rs  writer.rs
lzrs/src/: lib.rs  main.rs  step.rs
lzrs/src/app/: event.rs  mod.rs  run.rs
lzrs/src/layer/: mod.rs  step.rs  ui.rs
lzrs/src/trace/: mod.rs  start.rs  step.rs  ui.rs
lzrs/src/ui/: app.rs  draw.rs  log.rs  mod.rs  start.rs  subscriber.rs  writer.rs
lzrs2/: Cargo.toml
lzrs2/benches/: fastcmp.rs
lzrs2/src/: buffer.rs  dict.rs  lib.rs
lzrs2/src/buffer/: mod.rs  raw.rs  ringbuf.rs  u8.rs
lzrs2/src/buffer/ringbuf/: index.rs  mod.rs
src/: lib.rs  main.rs  writer.rs
src/debug/: mod.rs  step.rs  ui.rs
src/debug/ui/: mod.rs
src/ui/: mod.rs
