[package]
name = "lzrs"
version = "0.1.0"
edition = "2021"
default-run = "lzrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lzrs"

[features]
default = []
ui = []

[dependencies]
arraydeque = "0.4"
itertools = "0.10"
termion = "1.5"
tui = "0.16"
anyhow =  "1"
lazy_static = "1.4.0"
