[package]
name = "lzrs"
version = "0.1.0"
edition = "2021"
default-run = "ui"

[features]

[[bin]]
name = "ui"
path = "src/bin/ui.rs"


[dependencies]
lzrs-lib = { path = "../lzrs-lib" }
termion = "1.5.6"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
tui = "0.16.0"
